feat: formatted-date component for blog posts

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -4,6 +4,7 @@
 import "../../styles/global.css";
 import { getCollection, type CollectionEntry } from "astro:content";
 import Toc from "../../components/table-of-contest.astro";
+import FormattedDate from "../../components/formatted-date.astro";
 
 type Props = CollectionEntry<"blog">;
 
@@ -21,6 +22,7 @@ const { Content, headings } = await entry.render();
 
 <main class="prose">
 	<h1>{entry.data.title}</h1>
+	<FormattedDate date={entry.data.date} />
 	<Toc headings={headings} />
 	<Content />
 </main>
