--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 // src/pages/index.astro
+import Search from "astro-pagefind/components/Search";
 ---
 
 <html lang="en">
@@ -13,5 +14,6 @@
 	</head>
 	<body>
 		<h1>Astro</h1>
+		<Search />
 	</body>
 </html>
