--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
 // src/pages/index.astro
 import Search from "astro-pagefind/components/Search";
+import ToggleLightDarkMode from "../components/toggle-light-dark-mode.astro";
+
+import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -12,8 +15,9 @@ import Search from "astro-pagefind/components/Search";
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<body>
+	<body class="bg-gray-200 text-gray-900 dark:bg-gray-800 dark:text-gray-200">
 		<h1>Astro</h1>
+		<ToggleLightDarkMode title="Toggle light or dark mode" />
 		<Search />
 	</body>
 </html>
