--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection, type CollectionEntry } from "astro:content";
+import "../../styles/global.css";
 
 type YearlyPosts = {
 	[year: string]: CollectionEntry<"blog">[];
