--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,4 +1,5 @@
 ---
+import "../../styles/global.css";
 import { getCollection, type CollectionEntry } from "astro:content";
 import "../../styles/global.css";
 
