--- a/src/styles/font-face.css
+++ b/src/styles/font-face.css
@@ -6,7 +6,7 @@
 	font-family: "Fira Sans";
 	font-style: normal;
 	font-weight: 300;
-	src: url("../fonts/fira-sans-v17-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("/fonts/fira-sans-v17-latin-300.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* fira-sans-300italic - latin */
@@ -15,7 +15,7 @@
 	font-family: "Fira Sans";
 	font-style: italic;
 	font-weight: 300;
-	src: url("../fonts/fira-sans-v17-latin-300italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("/fonts/fira-sans-v17-latin-300italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* fira-sans-700 - latin */
@@ -24,7 +24,7 @@
 	font-family: "Fira Sans";
 	font-style: normal;
 	font-weight: 700;
-	src: url("../fonts/fira-sans-v17-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("/fonts/fira-sans-v17-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* fira-sans-700italic - latin */
@@ -33,7 +33,7 @@
 	font-family: "Fira Sans";
 	font-style: italic;
 	font-weight: 700;
-	src: url("../fonts/fira-sans-v17-latin-700italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url("/fonts/fira-sans-v17-latin-700italic.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 /* jetbrains-mono-regular - latin */
