--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,48 +3,8 @@
 @import url("font-face.css");
 
 @tailwind base;
-
-@layer base {
-	html {
-		font-size: clamp(0.938rem, 4vw, 1.18rem);
-	}
-
-	h1 {
-		font-size: 2.986rem;
-		font-weight: bold;
-	}
-
-	h2 {
-		font-size: 2.488rem;
-		font-weight: bold;
-	}
-
-	h3 {
-		font-size: 2.074rem;
-		font-weight: bold;
-	}
-
-	h4 {
-		font-size: 1.728rem;
-		font-weight: bold;
-	}
-
-	h5 {
-		font-size: 1.44rem;
-	}
-
-	h6 {
-		font-size: 1.2rem;
-	}
-
-	small {
-		font-size: 0.833rem;
-	}
-
-	code {
-		font-size: 0.938rem;
-	}
-}
+@tailwind components;
+@tailwind utilities;
 
 /**
  * Make shiki use class-based theme change
