--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,3 +16,13 @@ html.dark .astro-code span {
 	color: var(--shiki-dark) !important;
 	background-color: var(--shiki-dark-bg) !important;
 }
+
+.astro-code .line.highlighted {
+	display: inline-block;
+	width: 100%;
+	background-color: black !important;
+}
+
+html.dark .astro-code span.line.highlighted {
+	background-color: white !important;
+}
