--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 // src/pages/index.astro
+import { ViewTransitions } from "astro:transitions";
 import Search from "astro-pagefind/components/Search";
 import { GoogleTagmanager } from "@digi4care/astro-google-tagmanager";
 import { SEO, type SEOProps } from "astro-seo";
@@ -52,6 +53,7 @@ const headItems: SEOProps = {
 	<head>
 		<SEO {...headItems} />
 		<GoogleTagmanager id={import.meta.env.GTM_VERIFICATION_ID} partytown={true} />
+		<ViewTransitions />
 	</head>
 	<body class="bg-gray-200 text-gray-900 dark:bg-gray-800 dark:text-gray-200">
 		<ToggleLightDarkMode title="Toggle light or dark mode" />
