feat: remark-urwrap-images plugin (remark) installed for better HTML generation

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -32,30 +32,32 @@ const postsByYear = posts.reduce((accum: YearlyPosts, post) => {
 const years = Object.keys(postsByYear).sort((a, b) => parseInt(b) - parseInt(a));
 ---
 
-<head>
-	<title>Blog Posts</title>
-	<ViewTransitions />
-</head>
-<body class="bg-gray-200 text-gray-900 dark:bg-gray-800 dark:text-gray-200">
-	<Icon name="tabler:brand-astro" size={32} title="Blog Logo" />
-	<ToggleLightDarkMode />
-	<h1>Blog entries</h1>
-	<ul>
-		{
-			years.map((year) => (
-				<li>
-					<h2>{year}</h2>
-					<ul>
-						{postsByYear[year].map((post) => (
-							<li>
-								<a href={`/blog/${post.slug}`}>
-									&rarr; {post.data.title} - {post.data.date.toDateString()}{" "}
-								</a>
-							</li>
-						))}
-					</ul>
-				</li>
-			))
-		}
-	</ul>
-</body>
+<html lang="en">
+	<head>
+		<title>Blog Posts</title>
+		<ViewTransitions />
+	</head>
+	<body class="bg-gray-200 text-gray-900 dark:bg-gray-800 dark:text-gray-200">
+		<Icon name="tabler:brand-astro" size={32} title="Blog Logo" />
+		<ToggleLightDarkMode />
+		<h1>Blog entries</h1>
+		<ul>
+			{
+				years.map((year) => (
+					<li>
+						<h2>{year}</h2>
+						<ul>
+							{postsByYear[year].map((post) => (
+								<li>
+									<a href={`/blog/${post.slug}`}>
+										&rarr; {post.data.title} - {post.data.date.toDateString()}{" "}
+									</a>
+								</li>
+							))}
+						</ul>
+					</li>
+				))
+			}
+		</ul>
+	</body>
+</html>
